# SyntheticHealthSimulator

./: .gitignore  CHANGELOG.md  README.md  README_ru.md  SCIENTIFIC_REFERENCE.md  SCIENTIFIC_REFERENCE_EN.md  SCIENTIFIC_REFERENCE_RU.md  bump_version.py  generator.py  pyproject.toml  validator.py
.github/workflows/: release.yml
analysis/01_cohort_baseline/: 01_cohort_baseline_analysis.ipynb
analysis/02_lifestyle_history/: 02_lifestyle_history_analysis.ipynb
analysis/03_biomarkers/: 03_biomarkers_analysis.ipynb
analysis/04_health_risks/: 04_health_risks_analysis.ipynb
analysis/05_aggregated/: 05_aggregated_complete_pipeline.ipynb
analysis/sensitivity/: sensitivity_analysis.py
utils/: __init__.py  config.py  data_loader.py  plots.py  tables.py  validators.py
