[project]
name = "synthetichealthsimulator"
version = "1.1.0"
description = "Synthetic Medical Data Generator for Machine Learning Tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
    "urlopen>=1.0.0",
]
